src/FrameParser.cpp

// Generated from Frame.g4 by ANTLR 4.9.3


#include "../include/FrameVisitor.h"

#include "../include/FrameParser.h"


using namespace antlrcpp;
using namespace antlr4;

FrameParser::FrameParser(TokenStream* input) : Parser(input) {
    _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FrameParser::~FrameParser() {
    delete _interpreter;
}

std::string FrameParser::getGrammarFileName() const {
    return "Frame.g4";
}

const std::vector<std::string>& FrameParser::getRuleNames() const {
    return _ruleNames;
}

dfa::Vocabulary& FrameParser::getVocabulary() const {
    return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

FrameParser::FileContext::FileContext(ParserRuleContext* parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {
}

FrameParser::ProgramContext* FrameParser::FileContext::program() {
    return getRuleContext<FrameParser::ProgramContext>(0);
}

tree::TerminalNode* FrameParser::FileContext::EOF() {
    return getToken(FrameParser::EOF, 0);
}


size_t FrameParser::FileContext::getRuleIndex() const {
    return FrameParser::RuleFile;
}


antlrcpp::Any FrameParser::FileContext::accept(tree::ParseTreeVisitor* visitor) {
    if (auto parserVisitor = dynamic_cast<FrameVisitor*>(visitor))
        return parserVisitor->visitFile(this);
    else
        return visitor->visitChildren(this);
}

FrameParser::FileContext* FrameParser::file() {
    FileContext* _localctx = _tracker.createInstance<FileContext>(_ctx, getState());
    enterRule(_localctx, 0, FrameParser::RuleFile);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(116);
        program();
        setState(117);
        match(FrameParser::EOF);

    }
    catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
    }

//----------------- ProgramContext ------------------------------------------------------------------

FrameParser::ProgramContext::ProgramContext(ParserRuleContext * parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {
}

std::vector<FrameParser::ConstructContext*> FrameParser::ProgramContext::construct() {
    return getRuleContexts<FrameParser::ConstructContext>();
}

FrameParser::ConstructContext* FrameParser::ProgramContext::construct(size_t i) {
    return getRuleContext<FrameParser::ConstructContext>(i);
}

FrameParser::Global_optionsContext* FrameParser::ProgramContext::global_options() {
    return getRuleContext<FrameParser::Global_optionsContext>(0);
}

std::vector<tree::TerminalNode*> FrameParser::ProgramContext::COMMENT() {
    return getTokens(FrameParser::COMMENT);
}

tree::TerminalNode* FrameParser::ProgramContext::COMMENT(size_t i) {
    return getToken(FrameParser::COMMENT, i);
}

std::vector<FrameParser::ActionContext*> FrameParser::ProgramContext::action() {
    return getRuleContexts<FrameParser::ActionContext>();
}

FrameParser::ActionContext* FrameParser::ProgramContext::action(size_t i) {
    return getRuleContext<FrameParser::ActionContext>(i);
}

std::vector<tree::TerminalNode*> FrameParser::ProgramContext::NEWLINE() {
    return getTokens(FrameParser::NEWLINE);
}

tree::TerminalNode* FrameParser::ProgramContext::NEWLINE(size_t i) {
    return getToken(FrameParser::NEWLINE, i);
}


size_t FrameParser::ProgramContext::getRuleIndex() const {
    return FrameParser::RuleProgram;
}


antlrcpp::Any FrameParser::ProgramContext::accept(tree::ParseTreeVisitor * visitor) {
    if (auto parserVisitor = dynamic_cast<FrameVisitor*>(visitor))
        return parserVisitor->visitProgram(this);
    else
        return visitor->visitChildren(this);
}

FrameParser::ProgramContext* FrameParser::program() {
    ProgramContext* _localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
    enterRule(_localctx, 2, FrameParser::RuleProgram);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        size_t alt;
        enterOuterAlt(_localctx, 1);
        setState(122);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
            if (alt == 1) {
                setState(119);
                _la = _input->LA(1);
                if (!(_la == FrameParser::COMMENT

                    || _la == FrameParser::NEWLINE)) {
                    _errHandler->recoverInline(this);
                }
                else {
                    _errHandler->reportMatch(this);
                    consume();
                }
            }
            setState(124);
            _errHandler->sync(this);
            alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
        }
        setState(126);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == FrameParser::OPTIONS) {
            setState(125);
            global_options();
        }
        setState(131);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == FrameParser::COMMENT

            || _la == FrameParser::NEWLINE) {
            setState(128);
            _la = _input->LA(1);
            if (!(_la == FrameParser::COMMENT

                || _la == FrameParser::NEWLINE)) {
                _errHandler->recoverInline(this);
            }
            else {
                _errHandler->reportMatch(this);
                consume();
            }
            setState(133);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(134);
        construct();
        setState(141);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << FrameParser::COMMENT)
                | (1ULL << FrameParser::NEWLINE)
                | (1ULL << FrameParser::AUDIO)
                | (1ULL << FrameParser::FRAME)
                | (1ULL << FrameParser::VIDEO)
                | (1ULL << FrameParser::TRIM)
                | (1ULL << FrameParser::CROP)
                | (1ULL << FrameParser::EXTRACT)
                | (1ULL << FrameParser::OVERLAY)
                | (1ULL << FrameParser::MERGE)
                | (1ULL << FrameParser::ROTATE)
                | (1ULL << FrameParser::FLIP)
                | (1ULL << FrameParser::CONCATENATE)
                | (1ULL << FrameParser::SCALE)
                | (1ULL << FrameParser::SET)
                | (1ULL << FrameParser::SHARPEN)
                | (1ULL << FrameParser::BLUR)
                | (1ULL << FrameParser::CONVERT)
                | (1ULL << FrameParser::ADD))) != 0) || ((((_la - 69) & ~0x3fULL) == 0) &&
                    ((1ULL << (_la - 69)) & ((1ULL << (FrameParser::REDUCE - 69))
                        | (1ULL << (FrameParser::MIX - 69))
                        | (1ULL << (FrameParser::NORMALIZE - 69))
                        | (1ULL << (FrameParser::SHOW - 69))
                        | (1ULL << (FrameParser::SOBEL - 69))
                        | (1ULL << (FrameParser::EMBED - 69)))) != 0)) {
            setState(139);
            _errHandler->sync(this);
            switch (_input->LA(1)) {
            case FrameParser::COMMENT: {
                setState(135);
                match(FrameParser::COMMENT);
                break;
            }

            case FrameParser::AUDIO:
            case FrameParser::FRAME:
            case FrameParser::VIDEO: {
                setState(136);
                construct();
                break;
            }

            case FrameParser::TRIM:
            case FrameParser::CROP:
            case FrameParser::EXTRACT:
            case FrameParser::OVERLAY:
            case FrameParser::MERGE:
            case FrameParser::ROTATE:
            case FrameParser::FLIP:
            case FrameParser::CONCATENATE:
            case FrameParser::SCALE:
            case FrameParser::SET:
            case FrameParser::SHARPEN:
            case FrameParser::BLUR:
            case FrameParser::CONVERT:
            case FrameParser::ADD:
            case FrameParser::REDUCE:
            case FrameParser::MIX:
            case FrameParser::NORMALIZE:
            case FrameParser::SHOW:
            case FrameParser::SOBEL:
            case FrameParser::EMBED: {
                setState(137);
                action();
                break;
            }

            case FrameParser::NEWLINE: {
                setState(138);
                match(FrameParser::NEWLINE);
                break;
            }

            default:
                throw NoViableAltException(this);
            }
            setState(143);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }

    }
    catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
    }

//----------------- Global_optionsContext ------------------------------------------------------------------

FrameParser::Global_optionsContext::Global_optionsContext(ParserRuleContext * parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FrameParser::Global_optionsContext::OPTIONS() {
    return getToken(FrameParser::OPTIONS, 0);
}

tree::TerminalNode* FrameParser::Global_optionsContext::LBRACE() {
    return getToken(FrameParser::LBRACE, 0);
}

std::vector<tree::TerminalNode*> FrameParser::Global_optionsContext::NEWLINE() {
    return getTokens(FrameParser::NEWLINE);
}

tree::TerminalNode* FrameParser::Global_optionsContext::NEWLINE(size_t i) {
    return getToken(FrameParser::NEWLINE, i);
}

tree::TerminalNode* FrameParser::Global_optionsContext::RBRACE() {
    return getToken(FrameParser::RBRACE, 0);
}

std::vector<FrameParser::Reencode_optionContext*> FrameParser::Global_optionsContext::reencode_option() {
    return getRuleContexts<FrameParser::Reencode_optionContext>();
}

FrameParser::Reencode_optionContext* FrameParser::Global_optionsContext::reencode_option(size_t i) {
    return getRuleContext<FrameParser::Reencode_optionContext>(i);
}

std::vector<FrameParser::Output_optionContext*> FrameParser::Global_optionsContext::output_option() {
    return getRuleContexts<FrameParser::Output_optionContext>();
}

FrameParser::Output_optionContext* FrameParser::Global_optionsContext::output_option(size_t i) {
    return getRuleContext<FrameParser::Output_optionContext>(i);
}

std::vector<FrameParser::Overwrite_optionContext*> FrameParser::Global_optionsContext::overwrite_option() {
    return getRuleContexts<FrameParser::Overwrite_optionContext>();
}

FrameParser::Overwrite_optionContext* FrameParser::Global_optionsContext::overwrite_option(size_t i) {
    return getRuleContext<FrameParser::Overwrite_optionContext>(i);
}

std::vector<FrameParser::Debug_optionContext*> FrameParser::Global_optionsContext::debug_option() {
    return getRuleContexts<FrameParser::Debug_optionContext>();
}

FrameParser::Debug_optionContext* FrameParser::Global_optionsContext::debug_option(size_t i) {
    return getRuleContext<FrameParser::Debug_optionContext>(i);
}


size_t FrameParser::Global_optionsContext::getRuleIndex() const {
    return FrameParser::RuleGlobal_options;
}


antlrcpp::Any FrameParser::Global_optionsContext::accept(tree::ParseTreeVisitor * visitor) {
    if (auto parserVisitor = dynamic_cast<FrameVisitor*>(visitor))
        return parserVisitor->visitGlobal_options(this);
    else
        return visitor->visitChildren(this);
}

FrameParser::Global_optionsContext* FrameParser::global_options() {
    Global_optionsContext* _localctx = _tracker.createInstance<Global_optionsContext>(_ctx, getState());
    enterRule(_localctx, 4, FrameParser::RuleGlobal_options);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(144);
        match(FrameParser::OPTIONS);
        setState(146);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == FrameParser::NEWLINE) {
            setState(145);
            match(FrameParser::NEWLINE);
        }
        setState(148);
        match(FrameParser::LBRACE);
        setState(149);
        match(FrameParser::NEWLINE);
        setState(157);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == FrameParser::DEBUG

            || _la == FrameParser::NEWLINE || ((((_la - 108) & ~0x3fULL) == 0) &&
                ((1ULL << (_la - 108)) & ((1ULL << (FrameParser::REENCODE - 108))
                    | (1ULL << (FrameParser::OVERWRITE - 108))
                    | (1ULL << (FrameParser::OUTPUT - 108)))) != 0)) {
            setState(155);
            _errHandler->sync(this);
            switch (_input->LA(1)) {
            case FrameParser::REENCODE: {
                setState(150);
                reencode_option();
                break;
            }

            case FrameParser::OUTPUT: {
                setState(151);
                output_option();
                break;
            }

            case FrameParser::OVERWRITE: {
                setState(152);
                overwrite_option();
                break;
            }

            case FrameParser::DEBUG: {
                setState(153);
                debug_option();
                break;
            }

            case FrameParser::NEWLINE: {
                setState(154);
                match(FrameParser::NEWLINE);
                break;
            }

            default:
                throw NoViableAltException(this);
            }
            setState(159);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(160);
        match(FrameParser::RBRACE);
        setState(161);
        match(FrameParser::NEWLINE);

    }
    catch (RecognitionException& e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
    }

//----------------- Reencode_optionContext ------------------------------------------------------------------

FrameParser::Reencode_optionContext::Reencode_optionContext(ParserRuleContext * parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FrameParser::Reencode_optionContext::REENCODE() {
    return getToken(FrameParser::REENCODE, 0);
}

tree::TerminalNode* FrameParser::Reencode_optionContext::COLON() {
    return getToken(FrameParser::COLON, 0);
}

tree::TerminalNode* FrameParser::Reencode_optionContext::YES() {
    return getToken(FrameParser::YES, 0);
}

tree::TerminalNode* FrameParser::Reencode_optionContext::NO() {
    return getToken(FrameParser::NO, 0);
}


size_t FrameParser::Reencode_optionContext::getRuleIndex() const {
    return FrameParser::RuleReencode_option;
}


antlrcpp::Any FrameParser::Reencode_optionContext::accept(tree::ParseTreeVisitor * visitor) {
    if (auto parserVisitor = dynamic_cast<FrameVisitor*>(visitor))
        return parserVisitor->visitReencode_option(this);
    else
        return visitor->visitChildren(this);
}
